force-app/src/objects/c2g__AutomatedEliminationFilter__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpautomatedeliminationfilter</customHelpPage>
    <description>Stores the filters for the Automated Elimination process.</description>
    <fields>
        <fullName>c2g__AutomatedElimination__c</fullName>
        <description>Lookup to the Automated Elimination associated with the Automated Elimination Filter.</description>
        <label>Automated Elimination</label>
        <referenceTo>c2g__AutomatedElimination__c</referenceTo>
        <relationshipLabel>Automated Elimination Filters</relationshipLabel>
        <relationshipName>FilterValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimension 1 associated with the Automated Elimination Filter.</description>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>Filter_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimension 2 associated with the Automated Elimination Filter.</description>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>Filter_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimension 3 associated with the Automated Elimination Filter.</description>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>Filter_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FilterCriteria__c</fullName>
        <description>Picklist for the filter criteria of the Automated Elimination Filter.</description>
        <inlineHelpText>Select a GLA or dimension to use as the filter criteria.</inlineHelpText>
        <label>Filter Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>Dim 1</fullName>
                </value>
                <value>
                    <fullName>Dim 2</fullName>
                </value>
                <value>
                    <fullName>Dim 3</fullName>
                </value>
                <value>
                    <fullName>Dim 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the General Ledger Account associated with the Automated Elimination Filter.</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. You must select an intercompany elimination GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__IntercompanyElimination__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Automated Elimination Filters</relationshipLabel>
        <relationshipName>Filter_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Automated Elimination Filter</label>
    <nameField>
        <displayFormat>AEF{000000}</displayFormat>
        <label>Automated Elimination Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Elimination Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>